<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    android:background="@drawable/main_background"-->

    <RelativeLayout
        android:id="@+id/audience_layout"
        style="@style/select_role_block"
        android:background="@drawable/main_background"
        android:onClick="onJoinAsAudience"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582">

        <ImageView
            android:id="@+id/select_role_icon_audience"
            style="@style/select_role_block_icon"
            android:src="@drawable/ic_role_audience" />

        <RelativeLayout style="@style/select_role_block_content">

            <TextView
                android:id="@+id/select_role_arrow_audience"
                style="@style/select_role_block_arrow" />

            <TextView
                android:id="@+id/select_role_title_audience"
                style="@style/select_role_block_title"
                android:layout_toStartOf="@id/select_role_arrow_audience"
                android:layout_toLeftOf="@id/select_role_arrow_audience"
                android:text="@string/select_role_audience" />

            <TextView
                android:id="@+id/select_role_hint_audience"
                style="@style/select_role_block_hint"
                android:layout_below="@id/select_role_title_audience"
                android:text="@string/select_role_audience_hint" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/broadcaster_layout"
        style="@style/select_role_block"
        android:background="@drawable/main_background"
        android:onClick="onJoinAsBroadcaster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83">

        <ImageView
            android:id="@+id/select_role_icon_broadcaster"
            style="@style/select_role_block_icon"
            android:src="@drawable/ic_role_broadcaster" />

        <RelativeLayout style="@style/select_role_block_content">

            <TextView
                android:id="@+id/select_role_arrow_broadcaster"
                style="@style/select_role_block_arrow" />

            <TextView
                android:id="@+id/select_role_title_broadcaster"
                style="@style/select_role_block_title"
                android:layout_toStartOf="@id/select_role_arrow_broadcaster"
                android:layout_toLeftOf="@id/select_role_arrow_broadcaster"
                android:text="@string/select_role_broadcaster" />

            <TextView
                android:id="@+id/select_role_hint_broadcaster"
                style="@style/select_role_block_hint"
                android:layout_width="wrap_content"
                android:layout_below="@+id/select_role_title_broadcaster"
                android:text="@string/select_role_broadcaster_hint" />
        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/topic_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_alpha"
        android:digits="@string/legal_channel_name_characters"
        android:gravity="center"
        android:hint="@string/topic_edit_hint"
        android:lines="1"
        android:paddingBottom="@dimen/edit_text_padding"
        android:textColor="@color/blue_alpha"
        android:textColorHint="@color/blue_alpha"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/start_broadcast_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/start_broadcast_height"
        android:background="@drawable/start_broadcast_bg"
        android:gravity="center"
        android:onClick="onStartBroadcastClicked"
        android:paddingStart="@dimen/start_broadcast_padding"
        android:paddingLeft="@dimen/start_broadcast_padding"
        android:paddingEnd="@dimen/start_broadcast_padding"
        android:paddingRight="@dimen/start_broadcast_padding"
        android:text="@string/start_broadcast_title"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="@color/start_broadcast_text_color"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423" />

    <ImageView
        android:id="@+id/setting_button"
        android:layout_width="@dimen/setting_btn_size"
        android:layout_height="@dimen/setting_btn_size"
        android:onClick="onSettingClicked"
        android:src="@drawable/btn_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:theme="@style/Theme.MaterialComponents.DayNight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

    <!--</RelativeLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>
